# news-mcp-server

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/news_mcp/: __init__.py  config.py  main.py
src/news_mcp/models/: schemas.py
src/news_mcp/routes/: headlines.py  search.py  sources.py  trending.py
src/news_mcp/services/: news_service.py
tests/: conftest.py  test_headlines.py  test_search.py  test_sources.py  test_trending.py
