[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-mcp-server"
version = "0.1.0"
description = "MCP server exposing news search tools via FastAPI and NewsAPI.org"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "fastapi-mcp>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "anyio[trio]>=4.4.0",
]

[project.scripts]
news-mcp = "news_mcp.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/news_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.envs.default]
features = ["dev"]
